Agrego previsualizaciones de Lyx al apunte de Lenguajes Formales

--- a/2 Ano/Lenguajes Formales y Computabilidad/Lenguajes Formales.lyx
+++ b/2 Ano/Lenguajes Formales y Computabilidad/Lenguajes Formales.lyx
@@ -15558,6 +15558,10 @@ El siguiente diagrama representa a un automata que acepta cadenas que comienzan
 
 \begin_layout Standard
 \align center
+\begin_inset Preview
+
+\begin_layout Standard
+\align center
 \begin_inset ERT
 status open
 
@@ -15631,6 +15635,11 @@ path[->]
 
 \backslash
 end{tikzpicture}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \end_inset
@@ -16177,6 +16186,10 @@ Los estados visitados en dicha secuencia no tienen por que ser, en general,
 
 \begin_layout Standard
 \align center
+\begin_inset Preview
+
+\begin_layout Standard
+\align center
 \begin_inset ERT
 status open
 
@@ -16324,6 +16337,11 @@ path[->]
 
 \backslash
 end{tikzpicture}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \end_inset
@@ -16504,6 +16522,10 @@ La anterior definicion se corresponde con el siguiente diagrama de transiciones:
 
 \begin_layout Standard
 \align center
+\begin_inset Preview
+
+\begin_layout Standard
+\align center
 \begin_inset ERT
 status open
 
@@ -16609,6 +16631,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Paragraph
 Automata que acepta cadenas binarias que tienen al menos dos ceros seguidos
 \begin_inset Newline newline
@@ -16620,6 +16647,10 @@ Automata que acepta cadenas binarias que tienen al menos dos ceros seguidos
 \begin_layout Standard
 Definimos el automata mediante el siguiente diagrama de transiciones:
 \end_layout
+
+\begin_layout Standard
+\align center
+\begin_inset Preview
 
 \begin_layout Standard
 \align center
@@ -16709,6 +16740,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Paragraph
 Automata que acepta cadenas binarias que terminan en 
 \begin_inset Formula $00$
@@ -16728,6 +16764,10 @@ Automata que acepta cadenas binarias que terminan en
 \begin_layout Standard
 Definimos el automata mediante el siguiente diagrama de transiciones:
 \end_layout
+
+\begin_layout Standard
+\align center
+\begin_inset Preview
 
 \begin_layout Standard
 \align center
@@ -16866,6 +16906,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Paragraph
 Automata que acepta cadenas binarias con un numero impar de 
 \begin_inset Formula $1$
@@ -16885,6 +16930,10 @@ Automata que acepta cadenas binarias con un numero impar de
 \begin_layout Standard
 Definimos el automata mediante el siguiente diagrama de transiciones:
 \end_layout
+
+\begin_layout Standard
+\align center
+\begin_inset Preview
 
 \begin_layout Standard
 \align center
@@ -17021,6 +17070,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Paragraph
 \begin_inset Newpage pagebreak
 \end_inset
@@ -17051,6 +17105,10 @@ Automata que acepta cadenas sobre
 \begin_layout Standard
 Definimos el automata mediante el siguiente diagrama de transiciones:
 \end_layout
+
+\begin_layout Standard
+\align center
+\begin_inset Preview
 
 \begin_layout Standard
 \align center
@@ -17259,6 +17317,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Paragraph
 Automata que acepta cadenas sobre 
 \begin_inset Formula $\left\{ a,b,c\right\} $
@@ -17286,6 +17349,10 @@ Automata que acepta cadenas sobre
 \begin_layout Standard
 Definimos el automata mediante el siguiente diagrama de transiciones:
 \end_layout
+
+\begin_layout Standard
+\align center
+\begin_inset Preview
 
 \begin_layout Standard
 \align center
@@ -17458,6 +17525,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Paragraph
 \begin_inset Newpage pagebreak
 \end_inset
@@ -17476,6 +17548,10 @@ Automata que acepta cadenas sobre
 
 
 \end_layout
+
+\begin_layout Standard
+\align center
+\begin_inset Preview
 
 \begin_layout Standard
 \align center
@@ -17565,6 +17641,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Paragraph
 Automata que acepta cadenas sobre 
 \begin_inset Formula $\left\{ a,b\right\} $
@@ -17576,6 +17657,10 @@ Automata que acepta cadenas sobre
 
 
 \end_layout
+
+\begin_layout Standard
+\align center
+\begin_inset Preview
 
 \begin_layout Standard
 \align center
@@ -17693,6 +17778,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Paragraph
 Automata que NO acepta cadenas sobre 
 \begin_inset Formula $\left\{ a,b\right\} $
@@ -17704,6 +17794,10 @@ Automata que NO acepta cadenas sobre
 
 
 \end_layout
+
+\begin_layout Standard
+\align center
+\begin_inset Preview
 
 \begin_layout Standard
 \align center
@@ -17821,6 +17915,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Paragraph
 \begin_inset Newpage pagebreak
 \end_inset
@@ -17835,6 +17934,10 @@ Automata que acepta cadenas binarias que contienen
 
 
 \end_layout
+
+\begin_layout Standard
+\align center
+\begin_inset Preview
 
 \begin_layout Standard
 \align center
@@ -17952,6 +18055,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Paragraph
 Automata que acepta cadenas binarias distintas de 
 \begin_inset Formula $11$
@@ -17963,6 +18071,10 @@ Automata que acepta cadenas binarias distintas de
 
 
 \end_layout
+
+\begin_layout Standard
+\align center
+\begin_inset Preview
 
 \begin_layout Standard
 \align center
@@ -18102,6 +18214,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Paragraph
 \begin_inset Newpage pagebreak
 \end_inset
@@ -18116,6 +18233,10 @@ Automata que acepta cadenas de longitud minima 3 sobre
 
  cuya segunda letra es igual a la penultima
 \end_layout
+
+\begin_layout Standard
+\align center
+\begin_inset Preview
 
 \begin_layout Standard
 \align center
@@ -18394,6 +18515,11 @@ path[->]
 
 \backslash
 end{tikzpicture}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \end_inset
@@ -19189,6 +19315,10 @@ Consideremos el siguiente
 
 \begin_layout Standard
 \align center
+\begin_inset Preview
+
+\begin_layout Standard
+\align center
 \begin_inset ERT
 status open
 
@@ -19269,6 +19399,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Standard
 Es equivalente al siguietne 
 \begin_inset Formula $AEF$
@@ -19276,6 +19411,10 @@ Es equivalente al siguietne
 
 :
 \end_layout
+
+\begin_layout Standard
+\align center
+\begin_inset Preview
 
 \begin_layout Standard
 \align center
@@ -19392,6 +19531,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Section
 Automatas de pila
 \end_layout
@@ -19484,6 +19628,10 @@ Representaremos este proceso mediante el siguiente diagrama de transiciones:
 
 \begin_layout Standard
 \align center
+\begin_inset Preview
+
+\begin_layout Standard
+\align center
 \begin_inset ERT
 status open
 
@@ -19537,6 +19685,11 @@ beta$} (tau);
 
 \backslash
 end{tikzpicture}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \end_inset
@@ -19843,6 +19996,10 @@ Ya hemos visto que
 
 \begin_layout Standard
 \align center
+\begin_inset Preview
+
+\begin_layout Standard
+\align center
 \begin_inset ERT
 status open
 
@@ -19953,6 +20110,11 @@ lambda$} (sigma3)
 
 \backslash
 end{tikzpicture}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \end_inset
@@ -20449,6 +20611,10 @@ Automata que acepta el lenguaje
 
 \begin_layout Standard
 \align center
+\begin_inset Preview
+
+\begin_layout Standard
+\align center
 \begin_inset ERT
 status open
 
@@ -20526,6 +20692,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Paragraph
 Automata que acepta el lenguaje 
 \begin_inset Formula $\left\{ x^{n}y^{k}/n,k\in\mathbb{N},k\leq n\right\} $
@@ -20533,6 +20704,10 @@ Automata que acepta el lenguaje
 
  y vacia la pila
 \end_layout
+
+\begin_layout Standard
+\align center
+\begin_inset Preview
 
 \begin_layout Standard
 \align center
@@ -20685,6 +20860,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Paragraph
 Automata que acepta el lenguaje 
 \begin_inset Formula $\left\{ a^{n}b^{m}c^{n}/n,m\in\mathbb{N}_{0}\right\} $
@@ -20692,6 +20872,10 @@ Automata que acepta el lenguaje
 
  y vacia la pila
 \end_layout
+
+\begin_layout Standard
+\align center
+\begin_inset Preview
 
 \begin_layout Standard
 \align center
@@ -20872,6 +21056,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Paragraph
 \begin_inset Newpage pagebreak
 \end_inset
@@ -20886,6 +21075,10 @@ Automata que acepta el lenguaje
 
  y vacia la pila
 \end_layout
+
+\begin_layout Standard
+\align center
+\begin_inset Preview
 
 \begin_layout Standard
 \align center
@@ -21050,6 +21243,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Paragraph
 Automata que acepta el lenguaje 
 \begin_inset Formula $\left\{ ww^{R}/w\in\left\{ a,b\right\} ^{*}\right\} $
@@ -21057,6 +21255,10 @@ Automata que acepta el lenguaje
 
  y vacia la pila
 \end_layout
+
+\begin_layout Standard
+\align center
+\begin_inset Preview
 
 \begin_layout Standard
 \align center
@@ -21189,6 +21391,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Paragraph
 Automata que acepta el lenguaje 
 \begin_inset Formula $\left\{ a^{m}b^{n}/m,n\in\mathbb{N}_{0}\land n\leq2m\right\} $
@@ -21196,6 +21403,10 @@ Automata que acepta el lenguaje
 
  y vacia la pila
 \end_layout
+
+\begin_layout Standard
+\align center
+\begin_inset Preview
 
 \begin_layout Standard
 \align center
@@ -21353,6 +21564,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Paragraph
 \begin_inset Newpage pagebreak
 \end_inset
@@ -21367,6 +21583,10 @@ Automata que acepta el lenguaje
 
  y vacia la pila
 \end_layout
+
+\begin_layout Standard
+\align center
+\begin_inset Preview
 
 \begin_layout Standard
 \align center
@@ -21543,9 +21763,18 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Standard
 O en forma mas sencilla:
 \end_layout
+
+\begin_layout Standard
+\align center
+\begin_inset Preview
 
 \begin_layout Standard
 \align center
@@ -21657,6 +21886,11 @@ lambda$}	(sigma2)
 
 \backslash
 end{tikzpicture}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \end_inset
@@ -22813,6 +23047,9 @@ derecha hasta blanco
 \end_inset
 
 
+\begin_inset Preview
+
+\begin_layout Standard
 \begin_inset ERT
 status open
 
@@ -22879,6 +23116,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Itemize
 Maquina 
 \begin_inset Quotes cld
@@ -22897,6 +23139,9 @@ derecha hasta dos blancos
 \end_inset
 
 
+\begin_inset Preview
+
+\begin_layout Standard
 \begin_inset ERT
 status open
 
@@ -22981,6 +23226,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Itemize
 Maquina 
 \begin_inset Quotes cld
@@ -22999,6 +23249,9 @@ izquierda hasta punto
 \end_inset
 
 
+\begin_inset Preview
+
+\begin_layout Standard
 \begin_inset ERT
 status open
 
@@ -23058,6 +23311,11 @@ bullet$} (N)
 
 \backslash
 end{tikzpicture}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \end_inset
@@ -23316,6 +23574,9 @@ La funcion
 \end_inset
 
 
+\begin_inset Preview
+
+\begin_layout Standard
 \begin_inset ERT
 status open
 
@@ -23414,6 +23675,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Itemize
 La funcion 
 \begin_inset Formula $\square_{d}$
@@ -23428,6 +23694,9 @@ La funcion
 \end_inset
 
 
+\begin_inset Preview
+
+\begin_layout Standard
 \begin_inset ERT
 status open
 
@@ -23539,6 +23808,11 @@ square$} (sigma4)
 
 \backslash
 end{tikzpicture}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \end_inset
@@ -23706,6 +23980,9 @@ Definimos
 \end_layout
 
 \begin_layout Standard
+\begin_inset Preview
+
+\begin_layout Standard
 \begin_inset ERT
 status open
 
@@ -23841,6 +24118,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Standard
 Veamos algunos ejemplos:
 \end_layout
@@ -23914,6 +24196,9 @@ Definimos
 
  mediante el siguiente diagrama:
 \end_layout
+
+\begin_layout Standard
+\begin_inset Preview
 
 \begin_layout Standard
 \begin_inset ERT
@@ -24075,6 +24360,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Standard
 Veamos algunos ejemplos:
 \end_layout
@@ -24127,6 +24417,9 @@ Dada una funcion
 \end_inset
 
 
+\begin_inset Preview
+
+\begin_layout Standard
 \begin_inset ERT
 status open
 
@@ -24198,6 +24491,11 @@ square$} (sigma3)
 
 \backslash
 end{tikzpicture}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \end_inset
@@ -25308,6 +25606,9 @@ k\to & h\left(k\right)=\begin{cases}
 \end_layout
 
 \begin_layout Standard
+\begin_inset Preview
+
+\begin_layout Standard
 \begin_inset ERT
 status open
 
@@ -25375,6 +25676,11 @@ path[->]
 
 \backslash
 end{tikzpicture}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \end_inset
@@ -26886,6 +27192,9 @@ Modulo 3
 \end_layout
 
 \begin_layout Standard
+\begin_inset Preview
+
+\begin_layout Standard
 \begin_inset ERT
 status open
 
@@ -27029,6 +27338,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subsubsection
 Decidibilidad de 
 \begin_inset Formula $\left\{ aa,b\right\} $
@@ -27044,6 +27358,9 @@ Decidibilidad de
 \begin_layout Standard
  
 \end_layout
+
+\begin_layout Standard
+\begin_inset Preview
 
 \begin_layout Standard
 \begin_inset ERT
@@ -27222,6 +27539,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Subsubsection
 Reconocedora de 
 \begin_inset Formula $\left\{ w_{1}w_{2}/w_{1}\neq w_{2}\land\left|w_{1}\right|=\left|w_{2}\right|\right\} $
@@ -27321,6 +27643,9 @@ Maquina
 
 
 \end_layout
+
+\begin_layout Standard
+\begin_inset Preview
 
 \begin_layout Standard
 \begin_inset ERT
@@ -27428,6 +27753,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Paragraph
 Maquina 
 \begin_inset Formula $R$
@@ -27439,6 +27769,9 @@ Maquina
 
 
 \end_layout
+
+\begin_layout Standard
+\begin_inset Preview
 
 \begin_layout Standard
 \begin_inset ERT
@@ -27539,6 +27872,11 @@ square$} (S)
 
 \backslash
 end{tikzpicture}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \end_inset
@@ -27658,6 +27996,9 @@ Maquina
 \end_layout
 
 \begin_layout Standard
+\begin_inset Preview
+
+\begin_layout Standard
 \begin_inset ERT
 status open
 
@@ -27756,6 +28097,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Standard
 \begin_inset ERT
 status open
@@ -27787,6 +28133,9 @@ Maquina
 
 
 \end_layout
+
+\begin_layout Standard
+\begin_inset Preview
 
 \begin_layout Standard
 \begin_inset ERT
@@ -27904,6 +28253,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Paragraph
 Maquina 
 \begin_inset Formula $U_{4}$
@@ -27915,6 +28269,9 @@ Maquina
 
 
 \end_layout
+
+\begin_layout Standard
+\begin_inset Preview
 
 \begin_layout Standard
 \begin_inset ERT
@@ -28067,6 +28424,11 @@ end{tikzpicture}
 
 \end_layout
 
+\end_inset
+
+
+\end_layout
+
 \begin_layout Paragraph
 Maquina 
 \begin_inset Formula $C$
@@ -28078,6 +28440,9 @@ Maquina
 
 
 \end_layout
+
+\begin_layout Standard
+\begin_inset Preview
 
 \begin_layout Standard
 \begin_inset ERT
@@ -28317,6 +28682,11 @@ square$} (NA)
 
 \backslash
 end{tikzpicture}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \end_inset
